added changes for revenu